// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a \`span\` correctly 1`] = `
<span>
  <span>
    Hello World!
  </span>
</span>
`;

exports[`renders a \`strong\` correctly 1`] = `
<span>
  <strong>
    Hello World!
  </strong>
</span>
`;

exports[`renders the right title 1`] = `
<h3>
  Component Title
</h3>
`;
